# dride-core

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  index.js  main.cpp  package.json
src/: main.cpp  piMain.cpp
src/config/: config.json
